--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,3 +33,7 @@ tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
+
+compileJava {
+  options.release = 17
+}
